--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,7 @@ h6, p, body, li{
     color: #4c4c4c;
     font-weight: 400;
     letter-spacing: .01em;
+    text-align: left;
 }
 
 h1, h2 {
@@ -246,7 +247,7 @@ div.desc {
   margin-right:60px;
   top:-60px;
   position:relative;
-  text-align:left;
+  text-align:center;
 }
 
 .header{
