--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,7 @@ h3, h4, h5 {
   color: #4c4c4c;
   font-weight: 400;
   letter-spacing: .01em;
-  text-align: center;
+  /* text-align: center; */
 }
 
 
