--- a/css/style.css
+++ b/css/style.css
@@ -251,7 +251,7 @@ div.desc {
   margin-right:80px;
   top:-60px;
   position:relative;
-  /* text-align:center; */
+  text-align:center;
 }
 
 .header{
