--- a/css/style.css
+++ b/css/style.css
@@ -449,7 +449,7 @@ html {
 }
 
 /* The Close Button */
-.close {
+/* .close {
   position: absolute;
   top: 15px;
   right: 35px;
@@ -464,7 +464,7 @@ html {
   color: #bbb;
   text-decoration: none;
   cursor: pointer;
-}
+} */
 
 /* 100% Image Width on Smaller Screens */
 @media only screen and (max-width: 700px){
