--- a/css/style.css
+++ b/css/style.css
@@ -164,6 +164,8 @@ img {
   width: 100%;
   box-shadow: 0 0 0 0 rgba(0,0,0,0.24), 0 9px 25px 1px rgba(0,0,0,0.18), 0 10px 45px 0 rgba(0,0,0,0.12);
   margin-bottom:40px;
+  position: relative;
+  top:-40px;
 }
 
 .card-first{
@@ -255,8 +257,8 @@ div.desc {
 
 /*Paragraph styling*/
 .info{
-  margin-left: 80px;
-  margin-right:80px;
+  margin-left: 130px;
+  margin-right:130px;
   top:-60px;
   position:relative;
   text-align:center;
