--- a/css/style.css
+++ b/css/style.css
@@ -278,8 +278,8 @@ div.desc {
 
 /*Paragraph styling*/
 .info{
-  /* margin-left: 140px;
-  margin-right:140px; */
+  margin-left: 20px;
+  margin-right:20px;
   top:-60px;
   position:relative;
   text-align:center;
