--- a/css/style.css
+++ b/css/style.css
@@ -221,7 +221,7 @@ div.desc {
 } */
 
 
-@media (min-width:1025px) {
+@media all and (min-width: 1024px) and (max-width: 1280px) { 
   .info {
       margin-left:140px;
       margin-right: 140px;
