--- a/css/style.css
+++ b/css/style.css
@@ -221,14 +221,21 @@ div.desc {
 } */
 
 
-@media all and (min-width: 1024px) and (max-width: 1280px) { 
+/* @media all and (min-width: 1024px) and (max-width: 1280px) {
   .info {
       margin-left:140px;
       margin-right: 140px;
   }
+} */
+
+
+/* so that padding isnt too hardcore on mobile */
+@media only screen and (max-width: 500px){
+  .info {
+      margin-left:20px;
+      margin-right: 20px;
+  }
 }
-
-
 
 
 
