--- a/css/style.css
+++ b/css/style.css
@@ -110,6 +110,7 @@ ul.header-links--inline li{
     margin-right: 24px;
     text-transform: uppercase;
     font-weight: 600;
+    /* left: 24px; */
 }
 
 .button{
