--- a/css/style.css
+++ b/css/style.css
@@ -277,8 +277,8 @@ div.desc {
 }
 
 .center{
-  width:580px;
-  height:410px;
+  width:100%;
+  height:100%;
   padding-bottom:10px;
   margin-bottom:40px;
   position:relative;
