--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,17 @@ h6, p, body, li{
     text-align: left;
 }
 
+
+/* responsive */
+/* @media only screen and (max-width: 800px){
+  h6, p, body, li {
+
+  }
+} */
+
+
+
+
 h1, h2 {
   font-family: Josefin Sans, sans-serif;
   letter-spacing: 0;
