--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -176,9 +176,9 @@ input[type="reset"],
 input[type="button"] {
   display: inline-block;
   height: 38px;
-  padding: 0 30px;
+  /* padding: 0 30px; */
   color: #555;
-  text-align: center;
+  /* text-align: center; */
   font-size: 11px;
   font-weight: 600;
   line-height: 38px;
@@ -188,7 +188,7 @@ input[type="button"] {
   white-space: nowrap;
   background-color: transparent;
   border-radius: 4px;
-  border: 2px solid #6b90ba;
+  /* border: 2px solid #6b90ba; */
   cursor: pointer;
   box-sizing: border-box; }
 .button:hover,
